fixed a styling for some btn and made all the csr-headers the same across all pages (position jumped around)

--- a/src/styles/scss/_account.scss
+++ b/src/styles/scss/_account.scss
@@ -2,68 +2,19 @@
 .account-page {
     padding-left: 72px;
     height: 100vh;
-    //wrapper með nafn notendans og útskráningar takka /
-    .csr-header {
-        display: flex;
-        flex-direction: row;
-        width: 100%;
-        padding: 20px 40px;
-
-        .user-container {
-            display: flex;
-            flex-direction: row;
-            width: 100%;
-            align-items: center;
-            justify-content: center;
-           h1 {
-                margin: 0px;
-                font-size: 16px;
-                font-weight: 400;
-            }
-
-            .avatar {
-                path {
-                    fill: $primary;
-                }
-            }
-
-        //Avatar icon sem er alltaf eins
-        .avatar {
-            path {
-                fill: $primary;
-            }
-        }
-
-       
-        }
-           //Signout takki sem er eins alltaf
-           .signout-btn {
-            background: 0;
-            border: 0;
-            margin-left: auto;
-            cursor: pointer;
-            .logout-icon {
-                path {
-                    fill: $primary;
-                }
-            }
-        }
-
-    }
     .account-wrapper {
         display: flex;
         flex-direction: column;
         flex-wrap: wrap;
-        height: inherit;
-        
+        align-items: center;
+        justify-content: center;
+        height: 90vh;
         
         .account-container {
             display: flex;
             flex-direction: column;
             flex-wrap: wrap;
             align-items: center;
-            height: inherit;
-            margin-top:10%;
             .account-img {
                 height: 80px;
             }
@@ -72,7 +23,7 @@
                 font-weight: bold;
                 color: $primary;
                 text-transform: uppercase;
-                margin-top: 2%
+                margin-top: 10%
             }
             p {
                 max-width: 208px;
