--- a/src/styles/scss/_chatboxlist.scss
+++ b/src/styles/scss/_chatboxlist.scss
@@ -26,55 +26,6 @@
         align-items: flex-start;
     }
 
-    //wrapper með nafn notendans og útskráningar takka /
-    .csr-header {
-        display: flex;
-        flex-direction: row;
-        width: 100%;
-        padding: 20px 40px;
-
-        .user-container {
-            display: flex;
-            flex-direction: row;
-            width: 100%;
-            align-items: center;
-            justify-content: center;
-           h1 {
-                margin: 0px;
-                font-size: 16px;
-                font-weight: 400;
-            }
-
-            .avatar {
-                path {
-                    fill: $primary;
-                }
-            }
-
-        //Avatar icon sem er alltaf eins
-        .avatar {
-            path {
-                fill: $primary;
-            }
-        }
-
-       
-        }
-           //Signout takki sem er eins alltaf
-           .signout-btn {
-            background: 0;
-            border: 0;
-            margin-left: auto;
-            cursor: pointer;
-            .logout-icon {
-                path {
-                    fill: $primary;
-                }
-            }
-        }
-
-    }
-
     //Vinstri dálkur: Wrapper sem heldur utan um virk netspjöll, öll netspjöll og þjónustuteymi 
     .chat-overview {
         width: 230px;
